--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "build:log": "next build > build-log.txt 2>&1"
   },
   "dependencies": {
-    "next": "^14.2.5",
-    "react": "^19.0.0-rc-f994737d-20240726",
-    "react-dom": "^19.0.0-rc-f994737d-20240726",
-    "@supabase/supabase-js": "^2.50.3",
+    "@hcaptcha/react-hcaptcha": "^1.12.0",
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -42,6 +40,9 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@supabase/supabase-js": "^2.50.3",
+    "@tanstack/react-query": "^5.56.2",
+    "@types/dompurify": "^3.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -50,37 +51,37 @@
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "next": "^14.2.5",
     "next-themes": "^0.3.0",
+    "react": "^19.0.0-rc-f994737d-20240726",
     "react-day-picker": "^8.10.1",
+    "react-dom": "^19.0.0-rc-f994737d-20240726",
     "react-hook-form": "^7.53.0",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
-    "zod": "^3.23.8",
-    "@hcaptcha/react-hcaptcha": "^1.12.0",
-    "@hookform/resolvers": "^3.9.0",
-    "@tanstack/react-query": "^5.56.2",
-    "@types/dompurify": "^3.2.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.11",
-    "postcss": "^8.4.47",
-    "autoprefixer": "^10.4.20",
-    "@tailwindcss/typography": "^0.5.15",
-    "eslint": "^9.9.0",
-    "@next/eslint-plugin-next": "^14.2.5",
-    "eslint-config-next": "^14.2.5",
     "@eslint/js": "^9.9.0",
+    "@next/eslint-plugin-next": "^14.2.5",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^22.5.5",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "8.57.0",
+    "eslint-config-next": "^14.2.5",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "@types/node": "^22.5.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0"
+    "typescript-eslint": "^8.0.1"
   }
 }
