--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/themes": "^3.2.1",
-    "@supabase/ssr": "^0.6.1",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.51.0",
     "@tanstack/react-query": "^5.83.0",
     "@types/dompurify": "^3.2.0",
@@ -53,6 +53,7 @@
     "dompurify": "^3.2.6",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "instead": "^1.0.3",
     "lucide-react": "^0.525.0",
     "next": "^15.4.1",
     "next-themes": "^0.4.6",
