add ssr and redis setup

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@supabase/supabase-js": "^2.51.0",
     "@tanstack/react-query": "^5.83.0",
     "@types/dompurify": "^3.2.0",
+    "@types/redis": "^4.0.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -67,6 +68,7 @@
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^2.15.4",
+    "redis": "^5.6.1",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
